src/SimpleSchemaCodeGenerator/Grammars/GeneratedCode/SelectorParser.py
# Generated from C:\Code\v2\Common\Environment\src\SimpleSchemaCodeGenerator\Grammars\BuildEnvironment\..\Selector.g4 by ANTLR 4.5.1
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO


class SelectorParser ( Parser ):

    grammarFileName = "Selector.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'=='", u"'!='", u"'<'", u"'<='", u"'>'", 
                     u"'>='", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"'::'", u"':'", u"'/'", 
                     u"'*'", u"'['", u"']'", u"'('", u"')'", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"'pass'", u"'ancestors'", u"'ancestors_and_self'", 
                     u"'attributes'", u"'children'", u"'self_and_children'", 
                     u"'descendants'", u"'self_and_descendants'", u"'siblings'", 
                     u"'siblings_and_self'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"MULTI_LINE_NEWLINE", 
                      u"NEWLINE", u"MULTI_LINE_ESCAPE", u"HORIZONTAL_WHITESPACE", 
                      u"COMMENT", u"DECORATOR", u"SCOPE_DELIMITER", u"SEP", 
                      u"ANY", u"LBRACK", u"RBRACK", u"LPAREN", u"RPAREN", 
                      u"INT", u"NUMBER", u"ID", u"DOUBLE_QUOTE_STRING", 
                      u"SINGLE_QUOTE_STRING", u"PASS", u"DECORATOR_ANCESTORS", 
                      u"DECORATOR_ANCESTORS_AND_SELF", u"DECORATOR_ATTRIBUTES", 
                      u"DECORATOR_CHILDREN", u"DECORATOR_SELF_AND_CHILDREN", 
                      u"DECORATOR_DESCENDANTS", u"DECORATOR_SELF_AND_DESCENDANTS", 
                      u"DECORATOR_SIBLINGS", u"DECORATOR_SIBLINGS_AND_SELF", 
                      u"INDENT", u"DEDENT" ]

    RULE_arg = 0
    RULE_statements = 1
    RULE_statement = 2
    RULE_singleStatement = 3
    RULE_groupStatement = 4
    RULE_function = 5
    RULE_selector = 6
    RULE_selector_Predicate = 7
    RULE_selector_Predicate_Index = 8
    RULE_selector_Predicate_IndexRange = 9
    RULE_selector_Predicate_Statement = 10
    RULE_selector_Predicate_Statement_Operator = 11
    RULE_decorator = 12

    ruleNames =  [ u"arg", u"statements", u"statement", u"singleStatement", 
                   u"groupStatement", u"function", u"selector", u"selector_Predicate", 
                   u"selector_Predicate_Index", u"selector_Predicate_IndexRange", 
                   u"selector_Predicate_Statement", u"selector_Predicate_Statement_Operator", 
                   u"decorator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    MULTI_LINE_NEWLINE=7
    NEWLINE=8
    MULTI_LINE_ESCAPE=9
    HORIZONTAL_WHITESPACE=10
    COMMENT=11
    DECORATOR=12
    SCOPE_DELIMITER=13
    SEP=14
    ANY=15
    LBRACK=16
    RBRACK=17
    LPAREN=18
    RPAREN=19
    INT=20
    NUMBER=21
    ID=22
    DOUBLE_QUOTE_STRING=23
    SINGLE_QUOTE_STRING=24
    PASS=25
    DECORATOR_ANCESTORS=26
    DECORATOR_ANCESTORS_AND_SELF=27
    DECORATOR_ATTRIBUTES=28
    DECORATOR_CHILDREN=29
    DECORATOR_SELF_AND_CHILDREN=30
    DECORATOR_DESCENDANTS=31
    DECORATOR_SELF_AND_DESCENDANTS=32
    DECORATOR_SIBLINGS=33
    DECORATOR_SIBLINGS_AND_SELF=34
    INDENT=35
    DEDENT=36

    def __init__(self, input):
        super(SelectorParser, self).__init__(input)
        self.checkVersion("4.5.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ArgContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SelectorParser.ArgContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SelectorParser.ID, 0)

        def INT(self):
            return self.getToken(SelectorParser.INT, 0)

        def NUMBER(self):
            return self.getToken(SelectorParser.NUMBER, 0)

        def DOUBLE_QUOTE_STRING(self):
            return self.getToken(SelectorParser.DOUBLE_QUOTE_STRING, 0)

        def SINGLE_QUOTE_STRING(self):
            return self.getToken(SelectorParser.SINGLE_QUOTE_STRING, 0)

        def getRuleIndex(self):
            return SelectorParser.RULE_arg

        def accept(self, visitor):
            if hasattr(visitor, "visitArg"):
                return visitor.visitArg(self)
            else:
                return visitor.visitChildren(self)




    def arg(self):

        localctx = SelectorParser.ArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_arg)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SelectorParser.INT) | (1 << SelectorParser.NUMBER) | (1 << SelectorParser.ID) | (1 << SelectorParser.DOUBLE_QUOTE_STRING) | (1 << SelectorParser.SINGLE_QUOTE_STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SelectorParser.StatementsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SelectorParser.EOF, 0)

        def statement(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SelectorParser.StatementContext)
            else:
                return self.getTypedRuleContext(SelectorParser.StatementContext,i)


        def getRuleIndex(self):
            return SelectorParser.RULE_statements

        def accept(self, visitor):
            if hasattr(visitor, "visitStatements"):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = SelectorParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 28
                self.statement()
                self.state = 31 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SelectorParser.SEP) | (1 << SelectorParser.ANY) | (1 << SelectorParser.ID))) != 0)):
                    break

            self.state = 33
            self.match(SelectorParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SelectorParser.StatementContext, self).__init__(parent, invokingState)
            self.parser = parser

        def singleStatement(self):
            return self.getTypedRuleContext(SelectorParser.SingleStatementContext,0)


        def groupStatement(self):
            return self.getTypedRuleContext(SelectorParser.GroupStatementContext,0)


        def NEWLINE(self, i=None):
            if i is None:
                return self.getTokens(SelectorParser.NEWLINE)
            else:
                return self.getToken(SelectorParser.NEWLINE, i)

        def getRuleIndex(self):
            return SelectorParser.RULE_statement

        def accept(self, visitor):
            if hasattr(visitor, "visitStatement"):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = SelectorParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 35
                self.singleStatement()
                pass

            elif la_ == 2:
                self.state = 36
                self.groupStatement()
                pass


            self.state = 40 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 39
                    self.match(SelectorParser.NEWLINE)

                else:
                    raise NoViableAltException(self)
                self.state = 42 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SingleStatementContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SelectorParser.SingleStatementContext, self).__init__(parent, invokingState)
            self.parser = parser

        def selector(self):
            return self.getTypedRuleContext(SelectorParser.SelectorContext,0)


        def function(self):
            return self.getTypedRuleContext(SelectorParser.FunctionContext,0)


        def decorator(self):
            return self.getTypedRuleContext(SelectorParser.DecoratorContext,0)


        def getRuleIndex(self):
            return SelectorParser.RULE_singleStatement

        def accept(self, visitor):
            if hasattr(visitor, "visitSingleStatement"):
                return visitor.visitSingleStatement(self)
            else:
                return visitor.visitChildren(self)




    def singleStatement(self):

        localctx = SelectorParser.SingleStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_singleStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.selector()
            self.state = 46
            _la = self._input.LA(1)
            if _la==SelectorParser.DECORATOR:
                self.state = 45
                self.decorator()


            self.state = 48
            self.function()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GroupStatementContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SelectorParser.GroupStatementContext, self).__init__(parent, invokingState)
            self.parser = parser

        def selector(self):
            return self.getTypedRuleContext(SelectorParser.SelectorContext,0)


        def SCOPE_DELIMITER(self):
            return self.getToken(SelectorParser.SCOPE_DELIMITER, 0)

        def PASS(self):
            return self.getToken(SelectorParser.PASS, 0)

        def singleStatement(self):
            return self.getTypedRuleContext(SelectorParser.SingleStatementContext,0)


        def decorator(self):
            return self.getTypedRuleContext(SelectorParser.DecoratorContext,0)


        def function(self):
            return self.getTypedRuleContext(SelectorParser.FunctionContext,0)


        def NEWLINE(self, i=None):
            if i is None:
                return self.getTokens(SelectorParser.NEWLINE)
            else:
                return self.getToken(SelectorParser.NEWLINE, i)

        def INDENT(self):
            return self.getToken(SelectorParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(SelectorParser.DEDENT, 0)

        def statement(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SelectorParser.StatementContext)
            else:
                return self.getTypedRuleContext(SelectorParser.StatementContext,i)


        def getRuleIndex(self):
            return SelectorParser.RULE_groupStatement

        def accept(self, visitor):
            if hasattr(visitor, "visitGroupStatement"):
                return visitor.visitGroupStatement(self)
            else:
                return visitor.visitChildren(self)




    def groupStatement(self):

        localctx = SelectorParser.GroupStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_groupStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.selector()
            self.state = 52
            _la = self._input.LA(1)
            if _la==SelectorParser.DECORATOR:
                self.state = 51
                self.decorator()


            self.state = 55
            _la = self._input.LA(1)
            if _la==SelectorParser.LPAREN:
                self.state = 54
                self.function()


            self.state = 57
            self.match(SelectorParser.SCOPE_DELIMITER)
            self.state = 78
            token = self._input.LA(1)
            if token in [SelectorParser.PASS]:
                self.state = 58
                self.match(SelectorParser.PASS)

            elif token in [SelectorParser.SEP, SelectorParser.ANY, SelectorParser.ID]:
                self.state = 59
                self.singleStatement()

            elif token in [SelectorParser.NEWLINE]:
                self.state = 60
                self.match(SelectorParser.NEWLINE)
                self.state = 61
                self.match(SelectorParser.INDENT)
                self.state = 75
                token = self._input.LA(1)
                if token in [SelectorParser.PASS]:
                    self.state = 62
                    self.match(SelectorParser.PASS)
                    self.state = 63
                    self.match(SelectorParser.NEWLINE)

                elif token in [SelectorParser.NEWLINE, SelectorParser.SEP, SelectorParser.ANY, SelectorParser.ID]:
                    self.state = 71 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 67
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==SelectorParser.NEWLINE:
                            self.state = 64
                            self.match(SelectorParser.NEWLINE)
                            self.state = 69
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 70
                        self.statement()
                        self.state = 73 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SelectorParser.NEWLINE) | (1 << SelectorParser.SEP) | (1 << SelectorParser.ANY) | (1 << SelectorParser.ID))) != 0)):
                            break


                else:
                    raise NoViableAltException(self)

                self.state = 77
                self.match(SelectorParser.DEDENT)

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SelectorParser.FunctionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(SelectorParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(SelectorParser.RPAREN, 0)

        def DOUBLE_QUOTE_STRING(self):
            return self.getToken(SelectorParser.DOUBLE_QUOTE_STRING, 0)

        def SINGLE_QUOTE_STRING(self):
            return self.getToken(SelectorParser.SINGLE_QUOTE_STRING, 0)

        def getRuleIndex(self):
            return SelectorParser.RULE_function

        def accept(self, visitor):
            if hasattr(visitor, "visitFunction"):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = SelectorParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(SelectorParser.LPAREN)
            self.state = 81
            _la = self._input.LA(1)
            if not(_la==SelectorParser.DOUBLE_QUOTE_STRING or _la==SelectorParser.SINGLE_QUOTE_STRING):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
            self.state = 82
            self.match(SelectorParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SelectorContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SelectorParser.SelectorContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ANY(self, i=None):
            if i is None:
                return self.getTokens(SelectorParser.ANY)
            else:
                return self.getToken(SelectorParser.ANY, i)

        def ID(self, i=None):
            if i is None:
                return self.getTokens(SelectorParser.ID)
            else:
                return self.getToken(SelectorParser.ID, i)

        def SEP(self, i=None):
            if i is None:
                return self.getTokens(SelectorParser.SEP)
            else:
                return self.getToken(SelectorParser.SEP, i)

        def selector_Predicate(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SelectorParser.Selector_PredicateContext)
            else:
                return self.getTypedRuleContext(SelectorParser.Selector_PredicateContext,i)


        def getRuleIndex(self):
            return SelectorParser.RULE_selector

        def accept(self, visitor):
            if hasattr(visitor, "visitSelector"):
                return visitor.visitSelector(self)
            else:
                return visitor.visitChildren(self)




    def selector(self):

        localctx = SelectorParser.SelectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_selector)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            _la = self._input.LA(1)
            if _la==SelectorParser.SEP:
                self.state = 84
                self.match(SelectorParser.SEP)


            self.state = 87
            _la = self._input.LA(1)
            if not(_la==SelectorParser.ANY or _la==SelectorParser.ID):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
            self.state = 89
            _la = self._input.LA(1)
            if _la==SelectorParser.LBRACK:
                self.state = 88
                self.selector_Predicate()


            self.state = 98
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 91
                    self.match(SelectorParser.SEP)
                    self.state = 92
                    _la = self._input.LA(1)
                    if not(_la==SelectorParser.ANY or _la==SelectorParser.ID):
                        self._errHandler.recoverInline(self)
                    else:
                        self.consume()
                    self.state = 94
                    _la = self._input.LA(1)
                    if _la==SelectorParser.LBRACK:
                        self.state = 93
                        self.selector_Predicate()

             
                self.state = 100
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

            self.state = 102
            _la = self._input.LA(1)
            if _la==SelectorParser.SEP:
                self.state = 101
                self.match(SelectorParser.SEP)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Selector_PredicateContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SelectorParser.Selector_PredicateContext, self).__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(SelectorParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(SelectorParser.RBRACK, 0)

        def selector_Predicate_Index(self):
            return self.getTypedRuleContext(SelectorParser.Selector_Predicate_IndexContext,0)


        def selector_Predicate_IndexRange(self):
            return self.getTypedRuleContext(SelectorParser.Selector_Predicate_IndexRangeContext,0)


        def selector_Predicate_Statement(self):
            return self.getTypedRuleContext(SelectorParser.Selector_Predicate_StatementContext,0)


        def getRuleIndex(self):
            return SelectorParser.RULE_selector_Predicate

        def accept(self, visitor):
            if hasattr(visitor, "visitSelector_Predicate"):
                return visitor.visitSelector_Predicate(self)
            else:
                return visitor.visitChildren(self)




    def selector_Predicate(self):

        localctx = SelectorParser.Selector_PredicateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_selector_Predicate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(SelectorParser.LBRACK)
            self.state = 108
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.state = 105
                self.selector_Predicate_Index()
                pass

            elif la_ == 2:
                self.state = 106
                self.selector_Predicate_IndexRange()
                pass

            elif la_ == 3:
                self.state = 107
                self.selector_Predicate_Statement()
                pass


            self.state = 110
            self.match(SelectorParser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Selector_Predicate_IndexContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SelectorParser.Selector_Predicate_IndexContext, self).__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(SelectorParser.INT, 0)

        def getRuleIndex(self):
            return SelectorParser.RULE_selector_Predicate_Index

        def accept(self, visitor):
            if hasattr(visitor, "visitSelector_Predicate_Index"):
                return visitor.visitSelector_Predicate_Index(self)
            else:
                return visitor.visitChildren(self)




    def selector_Predicate_Index(self):

        localctx = SelectorParser.Selector_Predicate_IndexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_selector_Predicate_Index)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(SelectorParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Selector_Predicate_IndexRangeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SelectorParser.Selector_Predicate_IndexRangeContext, self).__init__(parent, invokingState)
            self.parser = parser

        def SCOPE_DELIMITER(self):
            return self.getToken(SelectorParser.SCOPE_DELIMITER, 0)

        def INT(self, i=None):
            if i is None:
                return self.getTokens(SelectorParser.INT)
            else:
                return self.getToken(SelectorParser.INT, i)

        def getRuleIndex(self):
            return SelectorParser.RULE_selector_Predicate_IndexRange

        def accept(self, visitor):
            if hasattr(visitor, "visitSelector_Predicate_IndexRange"):
                return visitor.visitSelector_Predicate_IndexRange(self)
            else:
                return visitor.visitChildren(self)




    def selector_Predicate_IndexRange(self):

        localctx = SelectorParser.Selector_Predicate_IndexRangeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_selector_Predicate_IndexRange)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            _la = self._input.LA(1)
            if _la==SelectorParser.INT:
                self.state = 114
                self.match(SelectorParser.INT)


            self.state = 117
            self.match(SelectorParser.SCOPE_DELIMITER)
            self.state = 119
            _la = self._input.LA(1)
            if _la==SelectorParser.INT:
                self.state = 118
                self.match(SelectorParser.INT)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Selector_Predicate_StatementContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SelectorParser.Selector_Predicate_StatementContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SelectorParser.ID, 0)

        def selector_Predicate_Statement_Operator(self):
            return self.getTypedRuleContext(SelectorParser.Selector_Predicate_Statement_OperatorContext,0)


        def arg(self):
            return self.getTypedRuleContext(SelectorParser.ArgContext,0)


        def getRuleIndex(self):
            return SelectorParser.RULE_selector_Predicate_Statement

        def accept(self, visitor):
            if hasattr(visitor, "visitSelector_Predicate_Statement"):
                return visitor.visitSelector_Predicate_Statement(self)
            else:
                return visitor.visitChildren(self)




    def selector_Predicate_Statement(self):

        localctx = SelectorParser.Selector_Predicate_StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_selector_Predicate_Statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(SelectorParser.ID)
            self.state = 122
            self.selector_Predicate_Statement_Operator()
            self.state = 123
            self.arg()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Selector_Predicate_Statement_OperatorContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SelectorParser.Selector_Predicate_Statement_OperatorContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SelectorParser.RULE_selector_Predicate_Statement_Operator

        def accept(self, visitor):
            if hasattr(visitor, "visitSelector_Predicate_Statement_Operator"):
                return visitor.visitSelector_Predicate_Statement_Operator(self)
            else:
                return visitor.visitChildren(self)




    def selector_Predicate_Statement_Operator(self):

        localctx = SelectorParser.Selector_Predicate_Statement_OperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_selector_Predicate_Statement_Operator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SelectorParser.T__0) | (1 << SelectorParser.T__1) | (1 << SelectorParser.T__2) | (1 << SelectorParser.T__3) | (1 << SelectorParser.T__4) | (1 << SelectorParser.T__5))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DecoratorContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SelectorParser.DecoratorContext, self).__init__(parent, invokingState)
            self.parser = parser

        def DECORATOR(self):
            return self.getToken(SelectorParser.DECORATOR, 0)

        def DECORATOR_ANCESTORS(self):
            return self.getToken(SelectorParser.DECORATOR_ANCESTORS, 0)

        def DECORATOR_ANCESTORS_AND_SELF(self):
            return self.getToken(SelectorParser.DECORATOR_ANCESTORS_AND_SELF, 0)

        def DECORATOR_ATTRIBUTES(self):
            return self.getToken(SelectorParser.DECORATOR_ATTRIBUTES, 0)

        def DECORATOR_CHILDREN(self):
            return self.getToken(SelectorParser.DECORATOR_CHILDREN, 0)

        def DECORATOR_SELF_AND_CHILDREN(self):
            return self.getToken(SelectorParser.DECORATOR_SELF_AND_CHILDREN, 0)

        def DECORATOR_DESCENDANTS(self):
            return self.getToken(SelectorParser.DECORATOR_DESCENDANTS, 0)

        def DECORATOR_SELF_AND_DESCENDANTS(self):
            return self.getToken(SelectorParser.DECORATOR_SELF_AND_DESCENDANTS, 0)

        def DECORATOR_SIBLINGS(self):
            return self.getToken(SelectorParser.DECORATOR_SIBLINGS, 0)

        def DECORATOR_SIBLINGS_AND_SELF(self):
            return self.getToken(SelectorParser.DECORATOR_SIBLINGS_AND_SELF, 0)

        def getRuleIndex(self):
            return SelectorParser.RULE_decorator

        def accept(self, visitor):
            if hasattr(visitor, "visitDecorator"):
                return visitor.visitDecorator(self)
            else:
                return visitor.visitChildren(self)




    def decorator(self):

        localctx = SelectorParser.DecoratorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_decorator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
